0.34 20101013
    . Make ->follow_link() also respect C<synchronize> by making ->follow_link()
      mostly synonymous with ->click()
    . Document the C<dom> option to ->click() (noted by M. Schwern)
    . ->click(undef) now fails

0.33 20100819
    . Add ->activateTab() for setting the currently displayed tab
    . Now needs MozRepl::RemoteObject 0.13 as a prerequisite
    . Add activate => 1 option to constructor
    . Remove ->content_utf8 , as ->content() already always returns utf8
    + Bring ->field() and ->value() in line with the HTML::Form API
      (and thus the WWW::Mechanize API). Now, very simple CSS
      selectors like #id and .class get accepted in addition
      to 'name' and '^name'.
    + ->value() now also returns the values for select+option elements

0.32 20100810
    . Add WWW::Mechanize::Firefox::FAQ as a list of frequently asked
      questions. As people now actually ask questions, this file
      has a reason to exist.
    . Add WWW::Mechanize::Firefox::Troubleshooting as a document
      for things that still need to be implemented. Also list
      workarounds.
    . Add example for how to change Firefox settings.
    . Change code for closing a tab so it works dynamically
    . Add method ->closeTab for closing arbitrary tabs and a test for it
    . Add experimental ->content_utf8 method that always tries to decode
      the content.
    ! All HTTP::Response objects now use ->content_utf8() instead of
      expecting the content to be in utf8. This may break your
      encoding-sensitive code, so please send me test cases where it breaks
      for you.

0.31 20100713
    . ->get now supports the :local_file shortcut for local saving
    . WWW::Mechanize::Firefox::Cookbook contains snippets
    . Documentation is more unified, short examples of function usage

0.30 20100711
    . Add ->is_visible method to check for node visibility
    . Add ->wait_until_invisible method to wait until a node disappears
    . Add tests for the above