@@ -3,6 +3,8 @@
       mostly synonymous with ->click()
     . Document the C<dom> option to ->click() (noted by M. Schwern)
     . ->click(undef) now fails
+    . Optimized ->get_set_field() to only return a value if it's needed. This
+      should speed up setting values in selectboxes.
 
 0.33 20100819
     . Add ->activateTab() for setting the currently displayed tab
